# safe-vex-template

./: Cargo.toml  LICENSE  project.pros  rust-toolchain.toml  terminal.sh  upload.sh
src/: autonomous.rs  disabled.rs  initialize.rs  lib.rs  main.rs  opcontrol.rs
